--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <a href="arquiv/Calendário 2022 SEMESTRE 1 Oficial_02_05_22.pdf" target="_blank"><b>Calendário</b></a>
        <a href="https://docs.google.com/spreadsheets/d/1EUGve6Lo_EBCYcHNMAhUrgoEvtP4XCqm/edit?rtpof=true" target="_blank"><b>Ensalamento</b></a>
        <a href="https://drive.google.com/drive/folders/1bjMsCXgi1A5w8-a8KqlrxTyCvt-7CT6N" target="_blank"><b>Drive COMP - TI/AUDIO</b></a>
-       <a href="https://github.com/JVTE"><b>GitHub</b></a>
+       <a href="https://github.com/JVTE" target="_blank"><b>GitHub</b></a>
        <a href="index2.html"><b>Ensalamento Semana de Provas Noturno</b></a>
    </div>
 
