--- a/index2.html
+++ b/index2.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="header">
-        <h1>Ensalamento Primeira Semana de Provas de 24 à 29/04</h1>
+        <h1>Ensalamento Semana de Provas/h1>
     </div>
     <div class="topnav">
         <a href="index.html">Voltar para a primeira página</a>
     </div>
 
     <div class="row">
-        <div class="column">
+        <!--<div class="column">
             <h2>Térreo</h2>
             <p>
                 <b> Sala 02: Direito 3° Sem </b>
@@ -31,7 +31,7 @@
                 <br>
                 <b> Sala 07: Direito 7° Sem </b>
             </p>            
-        </div>
+        </div> -->
         <div class="column">
             <h2>1° Andar</h2>
             <p>
@@ -49,7 +49,7 @@
                 <br>
                 <b> Sala 16: Nutrição 7° e Engenharia Civil 9° Sem </b>
                 <br>
-                <b> Sala 21: Alunos Especiais </b> 
+                <b> Sala 21: Sala Adaptada</b> 
             </p>
         </div>
     </div>
