--- a/index2.html
+++ b/index2.html
@@ -16,22 +16,6 @@
     </div>
 
     <div class="row">
-        <!--<div class="column">
-            <h2>Térreo</h2>
-            <p>
-                <b> Sala 02: Direito 3° Sem </b>
-                <br>
-                <b> Sala 03: Direito 1° Sem </b>
-                <br>
-                <b> Sala 04: Direito 5° Sem </b>
-                <br>
-                <b> Sala 05: ADS 1° e 3° Sem </b>
-                <br>
-                <b> Sala 06: ADS 5° e Pedagogia 5° Sem </b>
-                <br>
-                <b> Sala 07: Direito 7° Sem </b>
-            </p>            
-        </div> -->
         <div class="column">
             <h2>1° Andar</h2>
             <p>
@@ -49,7 +33,13 @@
                 <br>
                 <b> Sala 16: Nutrição 7° e Engenharia Civil 9° Sem </b>
                 <br>
-                <b> Sala 21: Sala Adaptada</b> 
+                <b> Sala 17: Sala Adaptada</b> 
+            </p>            
+        </div> 
+        <div class="column">
+            <h2></h2>
+            <p>
+                
             </p>
         </div>
     </div>
