--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Ensalamento Semana de Provas/h1>
+        <h1>Ensalamento Semana de Provas</h1>
     </div>
     <div class="topnav">
         <a href="index.html">Voltar para a primeira página</a>
