--- a/index2.html
+++ b/index2.html
@@ -14,32 +14,40 @@
     <div class="topnav">
         <a href="index.html">Voltar para a primeira página</a>
     </div>
-
+  
     <div class="row">
         <div class="column">
-            <h2>1° Andar</h2>
+            <h2>Térreo</h2>
             <p>
-                <b> Sala 08: ADM/PGER 1° Sem e 3° Sem </b>
-                <br>
-                <b> Sala 11: Pedagogia 7° Sem </b>
-                <br>
-                <b> Sala 12: ADM 5° e 7° Sem </b>
-                <br>
-                <b> Sala 13: Ciências Contábeis 5° e 7° Sem </b>
-                <br>
-                <b> Sala 14: Enfermagem 3° e Nutrição 3° Sem </b>
-                <br>
-                <b> Sala 15: Enfermagem 1° e Nutrição 5° Sem </b>
-                <br>
-                <b> Sala 16: Nutrição 7° e Engenharia Civil 9° Sem </b>
-                <br>
-                <b> Sala 17: Sala Adaptada</b> 
+                <strong> Sala 02: Direito 3° SEM </strong>
+            <br>
+                <strong> Sala 03: Direito 1° SEM </strong>
+            <br>
+                <strong> Sala 04: Direito 5° SEM <strong>
+            <br>
+                <strong> Sala 05: ADS 1° e 3° SEM </strong>
+            <br>
+                <strong> Sala 06: ADS 5° SEM e Pedagogia 5° SEM </strong>
+            <br>
+                <strong> Sala 07: Direito 7° SEM </strong>
             </p>            
         </div> 
         <div class="column">
-            <h2></h2>
+            <h2>1° Andar</h2>
             <p>
-                
+                <strong> Sala 08: ADM/PGER 1° Sem e 3° Sem </strong>
+            <br>
+                <strong> Sala 12: ADM 5° e 7° Sem </strong>
+            <br>
+                <strong> Sala 13: Ciências Contábeis 5° e 7° Sem </strong>
+            <br>
+                <strong> Sala 14: Enfermagem 3° e Nutrição 3° Sem </strong>
+            <br>
+                <strong> Sala 15: Enfermagem 1° e Nutrição 5° Sem </strong>
+            <br>
+                <strong> Sala 16: Nutrição 7° e Engenharia Civil 9° Sem </strong>
+            <br>
+                <strong> Sala 17: Sala Adaptada</strong> 
             </p>
         </div>
     </div>
