--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
         <h1>Ensalamento Semana de Provas</h1>
     </div>
     <div class="topnav">
-        <a href="index.html">Voltar para a primeira página</a>
+        <a href="index.html"><strong> Voltar para a primeira página </strong></a>
     </div>
   
     <div class="row">
